fix: fixed css issues regarding whitespace

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,10 @@ code {
         monospace;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
